# django_quickstart

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
django_quickstart/: manage.py
django_quickstart/django_quickstart/: asgi.py  urls.py  wsgi.py
django_quickstart/django_quickstart/settings/: base.py  dev.py
django_quickstart/django_quickstart_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
django_quickstart/django_quickstart_app/management/commands/: import_country_data_from_csv.py
django_quickstart/django_quickstart_app/migrations/: 0001_initial.py
